  - ECL now uses a hashtable to store objects when *PRINT-CIRCLE* is
    on. This hashtable is not cleared when calling PRINT-OBJECT, so
    that circularities are also detected inside these methods.

  - *PRINT-CIRCLE* defaults to NIL.

ECL 0.6 (bugfix release)
========================

* Errors fixed:

  - When installing, ECL would not build all required directories.

  - Symbol BUILD-PROGRAM should be exported from package C.

* System design:

  - Global variables READsuppress, READdefault_float_format,
    READtable, and READbase have been removed. The corresponding
    special variables are used instead.

  - No need for function read_object_recursive(), since read_object()
    is equivalent to it.

  - Changed the algorithm of the list reader. A dot which is not
    escaped is read as a symbol SI::. which is recognized by
    LEFT-PARENTHESIS-READER. This avoids using global variables
    "in_list_flag" and "dot_flag".

* ANSI compatibility:

  - READ and READ-PRESERVING-WHITESPACE behave the same when
    RECURSIVE-P is NIL. Furthermore, EOF is detected when EOF-ERROR-P
    is true, regardless of the value of RECURSIVE-P.

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***