@@ -912,6 +912,7 @@ cl_symbols[] = {
 {"SI::*CLASS-NAME-HASH-TABLE*", SI_SPECIAL, &siVclass_name_hash_table, NULL},
 {"SI::*GC-MESSAGE*", SI_SPECIAL, &siVgc_message, NULL},
 {"SI::*GC-VERBOSE*", SI_SPECIAL, &siVgc_verbose, NULL},
+{"SI::*IGNORE-ERRORS*", SI_SPECIAL, NULL, NULL},
 {"SI::*IGNORE-EOF-ON-TERMINAL-IO*", SI_SPECIAL, &siVignore_eof_on_terminal_io, NULL},
 {"SI::*INDENT-FORMATTED-OUTPUT*", SI_SPECIAL, &siVindent_formatted_output, NULL},
 {"SI::*INHIBIT-MACRO-SPECIAL*", SI_SPECIAL, &siVinhibit_macro_special, NULL},
@@ -1007,6 +1008,7 @@ cl_symbols[] = {
 {"SI::RESET-STACK-LIMITS", SI_ORDINARY, NULL, siLreset_stack_limits},
 {"SI::ROW-MAJOR-ASET", SI_ORDINARY, NULL, siLrow_major_aset},
 {"SI::RPLACA-NTHCDR", SI_ORDINARY, NULL, siLrplaca_nthcdr},
+{"SI::SAFE-EVAL", SI_ORDINARY, NULL, siLsafe_eval},
 {"SI::SCH-FRS-BASE", SI_ORDINARY, NULL, siLsch_frs_base},
 {"SI::SCHAR-SET", SI_ORDINARY, NULL, siLchar_set},
 {"SI::SELECT-PACKAGE", SI_ORDINARY, NULL, siLselect_package},
